--- a/client/bootstrap-design/index.html
+++ b/client/bootstrap-design/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" />
     <link rel="stylesheet" href="assets/css/Navbar-Centered-Links-icons.css" />
 
-    <script src="https://www.paypal.com/sdk/js?client-id=ARyYS4W4xw83yXbb6N3hR2-I6r6RXASIzMfPmQuoRGrgJYmUxOtGJ5yt1xPhBI2qOoBR0J2GMS14uPl3&currency=USD"></script>
+    <!-- <script src="https://www.paypal.com/sdk/js?client-id=ARyYS4W4xw83yXbb6N3hR2-I6r6RXASIzMfPmQuoRGrgJYmUxOtGJ5yt1xPhBI2qOoBR0J2GMS14uPl3&currency=USD"></script> -->
   </head>
 
   <body>
